stoped overflow in mobile design

--- a/src/components/step.css
+++ b/src/components/step.css
@@ -2,7 +2,7 @@
 
 .steps__container {
   position: relative;
-  min-height: calc(100vh - 14rem);
+  min-height: calc(100vh - 16rem);
   border: 1px solid transparent;
 }
 
